simple register and login  (email & pass)

--- a/apps/auth-api-hono/package.json
+++ b/apps/auth-api-hono/package.json
@@ -13,12 +13,13 @@
 		"@hono/node-server": "^1.13.7",
 		"@hono/zod-validator": "^0.4.1",
 		"@libsql/client": "^0.14.0",
+		"@node-rs/argon2": "^2.0.0",
+		"@oslojs/crypto": "^0.6.0",
+		"@oslojs/encoding": "1.1.0",
 		"@types/node": "^22.9.1",
 		"drizzle-kit": "^0.28.1",
 		"drizzle-orm": "^0.36.4",
 		"esbuild": "^0.24.0",
-		"@oslojs/crypto": "^0.6.0",
-		"@oslojs/encoding": "1.1.0",
 		"hono": "^4.6.11",
 		"tsx": "^4.19.2",
 		"zod": "^3.23.8"
