✅Sign in with Google

--- a/.env.example
+++ b/.env.example
@@ -25,4 +25,9 @@ PUBLIC_TURNSTILE_SITE_KEY="1x00000000000000000000AA"
 # PROD ONLY ############################################################
 # RESEND
 RESEND_API_KEY=""
+
+# GOOGLE OAUTH
+GOOGLE_OAUTH_CLIENT_ID=""
+GOOGLE_OAUTH_CLIENT_SECRET=""
+GOOGLE_OAUTH_REDIRECT_URI="https://auth.cart5dev.com/__p_auth/api/google_oauth/callback"
 # PROD ONLY ############################################################
