--- a/apps/auth-api-hono/package.json
+++ b/apps/auth-api-hono/package.json
@@ -17,6 +17,7 @@
 		"@oslojs/crypto": "^0.6.0",
 		"@oslojs/encoding": "1.1.0",
 		"@types/node": "^22.9.1",
+		"arctic": "^2.3.0",
 		"drizzle-kit": "^0.28.1",
 		"drizzle-orm": "^0.36.4",
 		"esbuild": "^0.24.0",
