--- a/apps/auth-api-hono/package.json
+++ b/apps/auth-api-hono/package.json
@@ -16,6 +16,7 @@
 		"@node-rs/argon2": "^2.0.0",
 		"@oslojs/crypto": "^0.6.0",
 		"@oslojs/encoding": "1.1.0",
+		"@oslojs/otp": "^1.0.0",
 		"@types/node": "^22.9.1",
 		"arctic": "^2.3.0",
 		"drizzle-kit": "^0.28.1",
@@ -23,6 +24,7 @@
 		"esbuild": "^0.24.0",
 		"hono": "^4.6.11",
 		"tsx": "^4.19.2",
+		"uqr": "^0.1.2",
 		"zod": "^3.23.8"
 	}
 }
