--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,8 @@ PUBLIC_TURNSTILE_SITE_KEY="1x00000000000000000000AA"
 
 
 
-# PROD ONLY ############################################################
+# PROD #############################################################################################
+
 # RESEND
 RESEND_API_KEY=""
 
@@ -30,4 +31,5 @@ RESEND_API_KEY=""
 GOOGLE_OAUTH_CLIENT_ID=""
 GOOGLE_OAUTH_CLIENT_SECRET=""
 GOOGLE_OAUTH_REDIRECT_URI="https://auth.cart5dev.com/__p_auth/api/google_oauth/callback"
-# PROD ONLY ############################################################
+
+# PROD #############################################################################################
