--- a/apps/auth-api-hono/package.json
+++ b/apps/auth-api-hono/package.json
@@ -14,6 +14,7 @@
 		"@hono/zod-validator": "^0.4.1",
 		"@libsql/client": "^0.14.0",
 		"@node-rs/argon2": "^2.0.0",
+		"@oslojs/binary": "^1.0.0",
 		"@oslojs/crypto": "^0.6.0",
 		"@oslojs/encoding": "1.1.0",
 		"@oslojs/otp": "^1.0.0",
