use direct localhost for auth check from SSR server, no need to go th whole network

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 NODE_ENV="development"
 
 PUBLIC_DOMAIN_NAME="cart5dev.com"
+AUTH_API_ORIGIN="http://127.0.0.1:3000"
 
 # Sample ENCRYPTION_KEY - MUST BE REPLACED, run `openssl rand --base64 32` to generate a new value
 ENCRYPTION_KEY="TxhRlnaVfHQQ/3tOZWYLejEPmPVyIWI/Ojp9JwupBU0="
