--- a/apps/web-store-ssr-astro/package.json
+++ b/apps/web-store-ssr-astro/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/node": "^8.3.4",
     "astro": "^4.16.15",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "lib": "workspace:*"
   }
 }
